2007-06-05  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: add capplets/appearance/gnome-theme-package.xml
	to generated files

2007-06-05  Ross Burton  <ross@openedhand.com>

	* configure.in:
	Bump glib requirement to 2.13, for the ~second-accurate timers.

2007-06-05  Ross Burton  <ross@openedhand.com>

	* configure.in:
	Call pkgconfig specifically for the typing break applet.

2007-06-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.3.

2007-06-02  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: don't try to distribute removed files...

2007-05-28  Jens Granseuer  <jensgr@gmx.net>

	* TODO.xml:
	* archiver/*
	* control-center.spec.in:
	* debian/*:
	* idl/*:
	* root-manager/*: remove obsolete files

2007-05-28  Jens Granseuer  <jensgr@gmx.net>

	* configure.in:
	* capplets/Makefile.am: remove fonts, theme, and ui capplets from the build
	and purge some obsolete stuff from configure.in

2007-05-19  Sergey Udaltsov <svu@gnome.org>

	* configure.in: dependency on libxklavier reverted to 3.2

2007-05-17  Sergey Udaltsov <svu@gnome.org>

	* configure.in: dependency on libxklavier 3.3

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: add desktop file for appearance capplet

2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* schemas/desktop_gnome_font_rendering.schemas.in: remove the dpi
	default value since g-s-d and the capplet ignore it anyway but gconf-editor
	doesn't know that (related to bug #378338)

2007-04-30  Jens Granseuer  <jensgr@gmx.net>

	* capplets/Makefile.am:
	* configure.in:
	add new appearance capplet to build system

2007-04-30  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Generate a capplets/keybindings/gnome-keybindings.pc
	from the .in file

2007-04-30  Thomas Wood  <thos@gnome.org>

	* capplets/appearance/Makefile.am:
	* capplets/appearance/appearance-main.c:
	* capplets/appearance/appearance-themes.c:
	* capplets/appearance/appearance-themes.h: