@@ -1,3 +1,8 @@
+2007-06-05  Christian Persch  <chpe@gnome.org>
+
+	* typing-break/main.c: (main): Use GOption to parse the arguments. Bug
+	#444399.
+
 2007-06-05  Jens Granseuer  <jensgr@gmx.net>
 
 	* configure.in: add capplets/appearance/gnome-theme-package.xml
